improve assembly scripts for easier idea upgrade (#12)
* * generate and insert includes into assemblies
* generate maven-assembly-plugin config
* save add-imports in resource
* add plugin_dirs.txt

* * added dev.properties for static system properties

* * added dev option for logging all idea errors

* * added update_minimal-jars.sh
* reversed jar order (plugins first)
* idea_loaded_classes_and_resources.txt delimiter changed to '|'

* * added process termination mode DESTROY_AFTER_SUMMARY
* create and config idea directories

* * renamed FormatterSummary -> FormatterResult
* FormatterResult: added exitStatus()
* JavaFormatterTest: added test cases for dryrun, recursive and mask
* use File.pathSeparatorChar for built classpath

* fix macos build

* fix macos build - 2

* regenerated minimal-jar assemblies (twice)

* Revert "regenerated minimal-jar assemblies (twice)"

This reverts commit e27f6c330b79475b93c970b042e569043c36c77f.

* regenerated minimal-reduced-jars assemblies

* reverted app.jar-assembly